--- a/.gitignore
+++ b/.gitignore
@@ -163,4 +163,4 @@ cython_debug/
 # Nested logs
 #  Logs which are nested in directories should be ignored.
 #  Example MAS/logs/ should be ignored.
-**/logs/
+**/logs/**
